# otel_genai_graph_exporter

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  QUICKSTART.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: pages.yml  publish.yml  test.yml
docs/: mapping.md  saved-queries.md  schema.md
docs/demo/: README.md  demo.tape
docs/images/: multi-agent-graph.dot
examples/: README.md  real_gemini_chat.json
release-notes/: 0.2.0.md  0.2.1.md
src/otel_genai_graph/: __init__.py  _env.py  cost.py  duckdb_sink.py  export.py  exporter.py  invariants.py  load.py  mapper.py  neo4j_sink.py  saved_queries.py  saved_queries_sql.py  schema.py  sink.py
tests/: capture_real_traces.py  capture_with_instrumentor.py  conftest.py  generate_traces.py  live_export_demo.py  test_cost.py  test_duckdb_sink.py  test_export.py  test_exporter.py  test_invariants.py  test_legacy_compat.py  test_mapper.py  test_neo4j_sink.py  test_saved_queries.py  test_synth.py  test_version.py
tests/fixtures/: agent_with_tool.json  error_case.json  multi_agent.json  multi_turn_conversation.json  rag_flow.json  simple_llm_call.json
tests/fixtures/public/google-genai/: instrumentor_google-genai_instr-1776723461-c11c14-0.json
tools/: build_static_site.py  render_graph.py
