[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otel-genai-graph"
version = "0.2.1"
description = "OpenTelemetry GenAI spans → queryable Neo4j graph. Mixed-vendor cost attribution, agent delegation, tool blast radius — one command, zero Cypher."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kumaran Ravichandran", email = "kumaran.pec@gmail.com" },
]
maintainers = [
    { name = "Kumaran Ravichandran", email = "kumaran.pec@gmail.com" },
]
keywords = [
    "opentelemetry",
    "genai",
    "neo4j",
    "observability",
    "llm",
    "graph",
    "otel-semconv",
    "agent-observability",
    "cost-attribution",
    "llm-tracing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Pick at least one backend extra:
#   pip install 'otel-genai-graph[neo4j]'    # graph backend
#   pip install 'otel-genai-graph[duckdb]'   # SQL analytical backend
#   pip install 'otel-genai-graph[all]'      # both, for tooling that switches
neo4j = [
    "neo4j>=5.20",
]
duckdb = [
    "duckdb>=1.0",
]
all = [
    "neo4j>=5.20",
    "duckdb>=1.0",
]
otlp = [
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "neo4j>=5.20",
    "duckdb>=1.0",
]

[project.scripts]
otel-genai-load = "otel_genai_graph.load:main"

[project.urls]
Homepage      = "https://github.com/kums1234/otel_genai_graph_exporter"
Source        = "https://github.com/kums1234/otel_genai_graph_exporter"
Issues        = "https://github.com/kums1234/otel_genai_graph_exporter/issues"
Changelog     = "https://github.com/kums1234/otel_genai_graph_exporter/blob/main/CHANGELOG.md"
Documentation = "https://github.com/kums1234/otel_genai_graph_exporter#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
